[tool.poetry]
name = "headerexposer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ansiwrap = "^0.8.4"
colorama = "^0.4.4"
jsonschema = "^3.2.0"
tabulate = "^0.8.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
